k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: marketing-project
  labels:
    name: marketing-project
    app: marketing-project-api
