k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketing-project-service
  namespace: marketing-project
  labels:
    app: marketing-project-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: marketing-project-api
---
apiVersion: v1
kind: Service
metadata:
  name: marketing-project-headless
  namespace: marketing-project
  labels:
    app: marketing-project-api
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: marketing-project-api
